--- a/README.textile
+++ b/README.textile
@@ -7,6 +7,7 @@ Install following ruby gems
     sudo gem install sinatra
     sudo gem install ruby-mp3info
     sudo gem install ruby-units
+    sudo gem install thin #Default ruby web-server to run frankie
 </code>
 </pre>
 
