Added instructions to run Frankie with thin web server

--- a/README.textile
+++ b/README.textile
@@ -11,5 +11,22 @@ Install following ruby gems
 </code>
 </pre>
 
+h2. Startup
+Actually you can use any RACK-compatible server to run Frankie, however it has default configuration for "Thin":http://code.macournoyer.com/thin/ web server.
+To run Frankie in development mode with Thin run:
+<pre>
+<code>
+    thin -C thin/development_config.yml start
+</code>
+</pre>
+For production run do:
+<pre>
+<code>
+    thin -C thin/production_config.yml start
+</code>
+</pre>
+
+And don't forget editing paths your *_config.yml files accourding to your settings.
+
 h2. 3rd parties
 I borrowed design and Tablecloth lib "Css Globe":http://www.cssglobe.com, hope they won'r be angry on me for that.
